k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autotube-api
spec:
  replicas: 1

  selector:
    matchLabels:
      app: autotube-api

  template:
    metadata:
      labels:
        app: autotube-api

    spec:
      containers:
        - name: autotube-api

          image: autotubeacr.azurecr.io/autotube-api:20260712.1

          ports:
            - containerPort: 8000
